--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>MyQuiz Game</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
-
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
@@ -18,31 +15,32 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyA2aNJbuIFVx1zEvAE4cddlY6Z4osNqZwM",
-    authDomain: "myquiz-game-3b77b.firebaseapp.com",
-    databaseURL: "https://myquiz-game-3b77b-default-rtdb.firebaseio.com",
-    projectId: "myquiz-game-3b77b",
-    storageBucket: "myquiz-game-3b77b.appspot.com",
-    messagingSenderId: "22722551049",
-    appId: "1:22722551049:web:f43cc1a2f9f4b4cd4ac7d8"
+    apiKey: "AIzaSyCBrT5E3YcSqvh_xR-pgZdNgzLstkbTBag",
+    authDomain: "hot-air-balloon-aebe0.firebaseapp.com",
+    databaseURL: "https://hot-air-balloon-aebe0-default-rtdb.firebaseio.com",
+    projectId: "hot-air-balloon-aebe0",
+    storageBucket: "hot-air-balloon-aebe0.appspot.com",
+    messagingSenderId: "232149845037",
+    appId: "1:232149845037:web:68421958c13aaaafada4a4"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
+    
+<!-- The core Firebase JS SDK is always required and must be listed first -->
 
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    
+  // Your web app's Firebase configuration
 
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    </script>
+  // Initialize Firebase
 
-    <script src="js/Contestant.js"></script>
-    <script src="js/Question.js"></script>
-    <script src="js/Quiz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <meta charset="utf-8">
+
   </head>
   <body>
-    <script src="sketch.js"></script>
-  </body>
+      <script src="sketch.js"></script>
+    </body>
 </html>
